--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -41,7 +41,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="16dp"
                         >
-                        <EditText
+                        <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@={mViewModel.quiz.title}"
